Name:		hneon
Version:	0.0.999
Synopsis:	
Description: 	
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.8
data-files:     


Executable hneon
  Main-is: hneon.hs
  hs-source-dirs: exe
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                   base>4, mtl>2, directory, filepath,
                   cmdargs, hneon

Library
  hs-source-dirs: lib
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                   base>4, mtl>2, directory, filepath,
                   cmdargs, bindings-DSL >= 1.0 && < 1.1 
  Exposed-Modules: 
                   Network.HTTP.Neon.ProgType
                   Network.HTTP.Neon.Job
                   Network.HTTP.Neon.Command
                  
                   Network.HTTP.Neon.Defs.Internal
                   Network.HTTP.Neon.Utils.Internal
                   Network.HTTP.Neon.Request.Internal
                   Network.HTTP.Neon.Session.Internal
                   Network.HTTP.Neon.Socket.Internal
                   Network.HTTP.Neon.SSL.Internal
                   Network.HTTP.Neon.URI.Internal

                   --Network.HTTP.Neon.Basic.Internal 
                   --Network.HTTP.Neon.Session.Internal
                   --Network.HTTP.Neon.Defs.Internal

                   -- Network.HTTP.Neon.Re207 
                   -- Network.HTTP.Neon.ACL
                   -- Network.HTTP.Neon.ACL3744
                   -- Network.HTTP.Neon.Alloc
                   -- Network.HTTP.Neon.Auth
                   -- Network.HTTP.Neon.Basic
                   -- Network.HTTP.Neon.Compress
                   -- Network.HTTP.Neon.Defs
                   -- Network.HTTP.Neon.Dates
                   -- Network.HTTP.Neon.I18N
                   -- Network.HTTP.Neon.Locks
                   -- Network.HTTP.Neon.MD5
                   -- Network.HTTP.Neon.PKCS11
                   -- Network.HTTP.Neon.Props
                   -- Network.HTTP.Neon.Redirect
                   -- Network.HTTP.Neon.Request
                   -- Network.HTTP.Neon.Session
                   -- Network.HTTP.Neon.Socket
                   -- Network.HTTP.Neon.SSL
                   -- Network.HTTP.Neon.String
                   -- Network.HTTP.Neon.URI
                   -- Network.HTTP.Neon.Utils
                   -- Network.HTTP.Neon.XML
                   -- Network.HTTP.Neon.XMLReq
  Other-Modules: 
  include-dirs:    /Users/wavewave/opt/Cellar/neon/0.29.3/include, csrc
  Install-includes:
--                    hne_207.h
--                    hne_basic.h
--                    hne_locks.h
--                    hne_request.h
--                    hne_uri.h
--                    hne_acl.h
--                    hne_compress.h
--                    hne_md5.h
--                    hne_session.h
--                    hne_utils.h
 --                   hne_acl3744.h
 --                   hne_dates.h
 --                   hne_pkcs11.h
 --                   hne_socket.h
 --                   hne_xml.h
 --                   hne_alloc.h
 --                   hne_defs.h
 --                   hne_props.h
  --                  hne_ssl.h
  --                  hne_xmlreq.h
  --                  hne_auth.h
  --                  hne_i18n.h
  --                  hne_redirect.h
  --                  hne_string.h


  C-sources: 
 --                   csrc/hne_207.c
 --                   csrc/hne_basic.c
 --                   csrc/hne_locks.c
 --                   csrc/hne_request.c
  --                  csrc/hne_uri.c
  --                  csrc/hne_acl.c
  --                  csrc/hne_compress.c
  --                  csrc/hne_md5.c
   --                 csrc/hne_session.c
   --                 csrc/hne_utils.c
  --                  csrc/hne_acl3744.c
  --                  csrc/hne_dates.c
  --                  csrc/hne_pkcs11.c
  --                  csrc/hne_socket.c
  --                  csrc/hne_xml.c
  --                  csrc/hne_alloc.c
  --                  csrc/hne_defs.c
  --                  csrc/hne_props.c
   --                 csrc/hne_ssl.c
  --                  csrc/hne_xmlreq.c
  --                  csrc/hne_auth.c
  --                  csrc/hne_i18n.c
  --                  csrc/hne_redirect.c
  --                  csrc/hne_string.c


  extra-lib-dirs:  /Users/wavewave/opt/Cellar/neon/0.29.3/lib
  extra-libraries: neon
 
		 